--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,7 @@ loader_version_range=[0,)
 mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=2023.09.03-1.20.1
+mapping_version=2024.06.16-1.20.6
 
 
 ## Mod Properties
@@ -48,11 +48,11 @@ mod_name=Non Functional Modification
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=0.1-1.20.1
+mod_version=0.1-1.20.6
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.ihnore_ihor.nonfunctionalmod
+mod_group_id=net.ihnore_ihor.nonfunctionalmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Ihnore Ihor
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
